added METIS Partioning

--- a/src/V1/makefile
+++ b/src/V1/makefile
@@ -1,13 +1,14 @@
-# Makefile for sequential version
+# Makefile for sequential version with METIS
 CC = g++
 CFLAGS = -std=c++17 -O3 -Wall
+LDFLAGS = -lmetis
 TARGET = v1
 SRC = v1.cpp
 
 all: $(TARGET)
 
 $(TARGET): $(SRC)
-	$(CC) $(CFLAGS) -o $@ $<
+	$(CC) $(CFLAGS) -o $@ $< $(LDFLAGS)
 
 run: $(TARGET)
 	./$(TARGET)
