--- a/src/V1/makefile
+++ b/src/V1/makefile
@@ -1,8 +1,12 @@
 # Makefile for sequential version
+
 CC = g++
 CFLAGS = -std=c++17 -O3 -Wall
 TARGET = v1
 SRC = v1.cpp
+LOG_DIR = logs
+
+.PHONY: all run clean
 
 all: $(TARGET)
 
@@ -10,9 +14,10 @@ $(TARGET): $(SRC)
 	$(CC) $(CFLAGS) -o $@ $<
 
 run: $(TARGET)
+	@mkdir -p $(LOG_DIR)
+	@chmod -R 777 $(LOG_DIR)
 	./$(TARGET)
 
 clean:
 	rm -f $(TARGET) *.o
-
-.PHONY: all run clean
+	rm -rf $(LOG_DIR)
