--- a/src/V3/makefile
+++ b/src/V3/makefile
@@ -6,6 +6,7 @@ DEBUGFLAGS = -std=c++17 -g -Wall -fopenmp -fsanitize=address
 TARGET = butterfly_v3
 LOG_DIR = logs
 TEST_INPUT = test_input.txt
+NUM_PROCS = 2  # Default number of MPI processes
 
 .PHONY: all run-v3 test debug cluster-v3 clean
 
@@ -16,27 +17,28 @@ $(TARGET): v3.cpp
 
 run-v3: $(TARGET)
 	@mkdir -p $(LOG_DIR)
-	@chmod -R 777 $(LOG_DIR)
-	./$(TARGET)
+	@chmod -R 755 $(LOG_DIR)
+	mpirun -np $(NUM_PROCS) ./$(TARGET)
 
 test: $(TARGET)
 	@mkdir -p $(LOG_DIR)
-	@chmod -R 777 $(LOG_DIR)
-	@echo -e "3\n2\n3\n6\n0\n1\n" > $(TEST_INPUT)
-	@./$(TARGET) < $(TEST_INPUT)
+	@chmod -R 755 $(LOG_DIR)
+	@echo -e "3\n2\n3\n3\n0\n1\n" > $(TEST_INPUT)  # uSize=3, vSize=2, numEdges=3, no sparsification, exact counting
+	mpirun -np $(NUM_PROCS) ./$(TARGET) < $(TEST_INPUT)
 	@rm -f $(TEST_INPUT)
 	@cat $(LOG_DIR)/output_*.txt
 
 debug: v3.cpp
 	$(CXX) $(DEBUGFLAGS) v3.cpp -o $(TARGET)
 	@mkdir -p $(LOG_DIR)
-	@chmod -R 777 $(LOG_DIR)
-	@echo -e "3\n2\n3\n6\n0\n1\n" > $(TEST_INPUT)
-	@./$(TARGET) < $(TEST_INPUT)
+	@chmod -R 755 $(LOG_DIR)
+	@echo -e "3\n2\n3\n3\n0\n1\n" > $(TEST_INPUT)
+	mpirun -np $(NUM_PROCS) ./$(TARGET) < $(TEST_INPUT)
 	@rm -f $(TEST_INPUT)
 	@cat $(LOG_DIR)/output_*.txt
 
 cluster-v3:
+	@echo "Submitting cluster job (modify run_v3.sh for your cluster)"
 	./run_v3.sh
 
 clean:
